MDEV-6548: Incorrect compression on LZMA.

Analysis: Provided incorrect parameter to output buffer size
and incorrectly determined actual payload size after compression.